2013-06-19 Dario Rodriguez <dario@artica.es>
	
	* godmode/setup/setup.php: Deleted flag to enable Incident reporters because
	this feature was removed.
	* include/js/integria_incident_search.js,
	operation/incidents/incident_detail.php,
	operation/incidents_simple/incidents.php: Deleted some code and functions related
	to Incident reporters feature that was removed.

2013-06-19  Vanessa Gil <vanessa.gil@artica.es>

	* integria_db.sql
	  include/wiki/lionwiki_lib.php
	  include/wiki/plugins/wkp_AdminPages.php
	  operation/side_menu.php: Added ACLs to wiki.

2013-06-19 Dario Rodriguez <dario@artica.es>

	* include/functions_incidents.php: New function has_workunits,
	modified functions get_incidents and filter_incidents to fit
	new ACLs.
	* operation/incidents/incident_files.php,
	* operation/incidents/incident_detail.php,
	* operation/incidents/incident_dashboard_detail.php,
	* operation/side_menu.php: Fixed some problems with ACLs
	to fit the new ACL model for incidents.

2013-06-17 Dario Rodriguez <dario@artica.es>

	* include/integria_cron.php,
	include/functions_pop3.php: Email process feature moved
	to Enterprise version.

2013-06-17 Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css: Fixed a cross browser bug
	with a few background positions.

2013-06-17  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_inventories.php: Fixed info about
	type fields.

2013-06-13 Dario Rodriguez <dario@artica.es>

	* include/functions_html.php: Added support to set onclick callbacks to
	print_input_extended function.

2013-06-13 Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css,
	include/functions_user.php: Modified style of new autocomplete plugin.

2013-06-13 Dario Rodriguez <dario@artica.es>

	* operation/leads/lead_detail.php,
	operation/projects/people_manager.php,
	operation/projects/project_detail.php,
	operation/workorders/wo.php,
	operation/users/user_spare_workunit.php,
	operation/users/user_task_assigment.php,